Create blockchain web page - Code tidy up

--- a/blockchain.html
+++ b/blockchain.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<link rel="stylesheet" type="text/css" href="stylesheet.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
+
 <body>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -17,15 +14,14 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="index.php">Home</a></li>
-                <li><a href="blockchain.html">Blockchain</a></li>
+                <li class="active"><a href="">Blockchain</a></li>
                 <li><a href="demo.html">Miscellaneous</a></li>
-                <li class="active"><a>About</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </div>
     </nav>
 
-    <p style="font-size: 30px; color: aqua">E-mail: paulhawking_pan@hotmail.com</p>
-
     <span style="font-size: 10px; color: Grey">This website is made for educational purpose only. I DO NOT own the image, sound effect or other resources on this website.</span>
 </body>
+
 </html>
