--- a/demo.html
+++ b/demo.html
@@ -21,7 +21,8 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="index.php">Home</a></li>
-                <li class="active"><a href="">Demo</a></li>
+                <li><a href="blockchain.html">Blockchain</a></li>
+                <li class="active"><a href="">Miscellaneous</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
