--- a/blockchain.html
+++ b/blockchain.html
@@ -7,22 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script language="JavaScript" src="blockchain/blockchain.js"></script>
     <script language="JavaScript">
-        // alice.transfer(bob, 0);
-        // bob.transfer(carol, 0);
-        // carol.transfer(alice, 0);
-
-        // alice.mineBlock();
-        // alice.mineBlock();
-        // alice.mineBlock();
-        // alice.transfer(bob, 10);
-        // bob.mineBlock();
-
-        // masterBlockChain.checkValidity();
-        // masterBlockChain.getBalance(alice.name);
-        // masterBlockChain.getBalance(bob.name);
-        // masterBlockChain.getBalance(carol.name);
-        // console.log("");
-        // masterBlockChain.printAll();
+        // masterBlockChain.getMasterBlockchain();
 
         window.onload = function ()
         {
